# agent-core-runtime

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: agent-core.md
examples/: 01_basic_agent.py  02_custom_prompt.py  03_custom_tool.py  04_tool_agent.py  05_custom_agent.py  _openai_compatible.py  basic_flow.py  openai_compatible_tool_chatbot.py  tool_chatbot.py
src/agent_core/: __init__.py  agent.py  models.py
src/agent_core/core/: __init__.py  context.py  node.py  trace.py
src/agent_core/llm/: __init__.py  client.py  models.py  nodes.py  openai_compatible.py
src/agent_core/nodes/: __init__.py  agent_loop.py
src/agent_core/tools/: nodes.py
tests/: test_agent_core_package.py  test_agent_loop_nodes.py  test_core.py  test_file_tools.py  test_llm_client.py  test_llm_nodes.py  test_openai_compatible_llm.py  test_tools.py
