[project]
name = "agent-core-runtime"
version = "0.1.0"
description = "A lightweight node-flow runtime for building tool-using agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
examples = [
    "openai>=1.88.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

